# magoreal

./: .dockerignore  .env.example  .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  Readme.md  check-ports.sh  deploy.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  nginx-deploy.sh  nginx-n8n-mcp.conf  nginx-n8n.conf  nginx-sitepage.conf  nginx.conf  requirements-dev.txt  requirements.txt  setup.sh
core/: email_backend.py  settings.py  test_settings.py  urls.py
django-html-translator/: .gitignore  README.md  package.json  pyproject.toml
django-html-translator/src/html_translator/: __init__.py  admin.py  apps.py  checks.py  conf.py  middleware.py  models.py  sections.py  test_middleware.py  translator.py  urls.py  utils.py  views.py
django-html-translator/src/html_translator/management/commands/: html_translator_check.py
django-html-translator/src/html_translator/migrations/: 0001_initial.py  0002_translatorconfig.py  0003_alter_available_languages_default.py  0004_alter_available_languages_callable.py
django-html-translator/src/html_translator/static/html_translator/js/: lang-selector.js
django-html-translator/src/html_translator/templates/html_translator/: _selector.html
django-html-translator/src/html_translator/templatetags/: translations.py
docker/: dev-up.sh  dev_check.py  ensure_dev_ports.py  init-db.sql  n8n-export.sh  n8n-import.sh  n8n-init-db.sh  run_dev_serve.py
docs/: MORPH_BANNER_FONT.md
landing/: admin.py  apps.py  forms.py  models.py  tests.py  translations_hooks.py  urls.py  views.py
portfolio/: admin.py  apps.py  context_processors.py  loaders.py  models.py  tests.py  (+3 more)
(+155 files in other folders)
