[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-html-translator"
version = "0.1.0"
description = "Reusable Django app for AI-powered HTML section translation via OpenAI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["django", "translation", "openai", "i18n", "html"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Internationalization",
]
dependencies = [
    "django>=4.2",
    "openai>=1.0",
    "beautifulsoup4>=4.12",
    "django-ratelimit>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-django>=4",
    "coverage>=7",
]

[project.urls]
Homepage = "https://github.com/tu-usuario/django-html-translator"
Repository = "https://github.com/tu-usuario/django-html-translator"
"Bug Tracker" = "https://github.com/tu-usuario/django-html-translator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/html_translator"]

[tool.hatch.build.targets.wheel.data]
"src/html_translator/templates" = "html_translator/templates/"

[tool.hatch.build.targets.sdist]
include = ["src/", "README.md", "LICENSE"]
